--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,3 @@
-APP_PORT = 8080
+APP_PORT = 3000
 DATABASE_URL="mysql://root:@localhost:3306/projectrest"
+JWT_SECRET = "Jz8vZWc8F+OzF9lvnLjzQn2n5fupH7cwKXq0mWGuXho="
