--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,4 @@
 APP_PORT = 3000
 DATABASE_URL="mysql://root:@localhost:3306/projectrest"
 JWT_SECRET = "Jz8vZWc8F+OzF9lvnLjzQn2n5fupH7cwKXq0mWGuXho="
+GOOGLE_API_KEY = "AIzaSyByuxm0YTdX8Wc72li2QDWZKEhsRq3Tdww"
