Add config babel and add test login function

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -23,5 +23,11 @@
     "prisma": "^6.7.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.27.2",
+    "@jest/globals": "^29.7.0",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0"
   }
 }
